Added basic Main Menu

--- a/Wordle/AppShell.xaml
+++ b/Wordle/AppShell.xaml
@@ -8,7 +8,12 @@
     Title="Wordle">
 
     <ShellContent
-        Title="Home"
+    Title="MainMenu"
+    ContentTemplate="{DataTemplate local:MainMenu}"
+    Route="MainMenu"/>
+    
+    <ShellContent
+        Title="MainPage"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
