--- a/Wordle/MainPage.xaml
+++ b/Wordle/MainPage.xaml
@@ -24,7 +24,7 @@
             <Setter Property="Margin" Value="4"/>
         </Style>
 
-        <Style x:Key="Btn" TargetType="Button"> <!-- Submit Button -->
+        <Style x:Key="Btn" TargetType="Button"> <!-- Button -->
             <Setter Property="BackgroundColor" Value="Green"/>
             <Setter Property="TextColor" Value="White"/>
             <Setter Property="TextTransform" Value="Uppercase"/>
