--- a/Wordle/MainPage.xaml
+++ b/Wordle/MainPage.xaml
@@ -38,6 +38,8 @@
     </ContentPage.Resources>
 
     <StackLayout Padding="10" VerticalOptions="FillAndExpand">
+        <Button x:Name="historyBtn" Style="{StaticResource Btn}" Clicked="ViewHistory_Clicked" Text="View History" HorizontalOptions="FillAndExpand"/>
+
         <Grid RowDefinitions="*, *, *, *, *, *" ColumnDefinitions="*, *, *, *, *"
               HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
 
