Added Dark and Light Mode

--- a/Wordle/AppShell.xaml
+++ b/Wordle/AppShell.xaml
@@ -21,5 +21,9 @@
         Title="HistoryPage"
         ContentTemplate="{DataTemplate local:HistoryPage}"
         Route="HistoryPage" />
+    <ShellContent
+        Title="SettingsPage"
+        ContentTemplate="{DataTemplate local:SettingsPage}"
+        Route="SettingsPage"/>
 
 </Shell>
